--- a/filewidget.ui
+++ b/filewidget.ui
@@ -174,6 +174,9 @@
         <property name="text">
          <string>/Users/johannes/path/to/long/soundfile/test.wav</string>
         </property>
+        <property name="wordWrap">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
      </layout>
