Add sound player (phonon).

--- a/sampleman.ui
+++ b/sampleman.ui
@@ -14,7 +14,7 @@
    <string>Sampleman</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout" columnstretch="1">
+   <layout class="QGridLayout" name="gridLayout" columnstretch="0">
     <item row="0" column="0">
      <widget class="QLineEdit" name="lineEdit"/>
     </item>
@@ -46,11 +46,39 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="0">
-     <widget class="QSlider" name="seekSlider">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+    <item row="3" column="0">
+     <widget class="QFrame" name="sliderFrame">
+      <property name="frameShape">
+       <enum>QFrame::NoFrame</enum>
       </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <property name="margin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="fileInfoLabel">
+         <property name="text">
+          <string/>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="Phonon::SeekSlider" name="seekSlider_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="Phonon::VolumeSlider" name="volumeSlider_2"/>
+       </item>
+      </layout>
      </widget>
     </item>
    </layout>
@@ -109,9 +137,19 @@
     <addaction name="actionEdit_all"/>
     <addaction name="actionEdit_one_by_one"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionShow_file_info"/>
+    <addaction name="actionShow_seek_slider"/>
+    <addaction name="actionShow_volume"/>
+    <addaction name="actionShow_tags"/>
+   </widget>
    <addaction name="menuLibrary"/>
    <addaction name="menuFile"/>
    <addaction name="menuTags"/>
+   <addaction name="menuView"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QDockWidget" name="dockWidget_2">
@@ -177,21 +215,6 @@
     <string>Edit one by one</string>
    </property>
   </action>
-  <action name="actionApp">
-   <property name="text">
-    <string>App</string>
-   </property>
-  </action>
-  <action name="actionApp_2">
-   <property name="text">
-    <string>App</string>
-   </property>
-  </action>
-  <action name="action_home_johannes">
-   <property name="text">
-    <string>/home/johannes</string>
-   </property>
-  </action>
   <action name="actionPlay">
    <property name="checkable">
     <bool>true</bool>
@@ -203,7 +226,140 @@
     <string>Space</string>
    </property>
   </action>
+  <action name="actionShow_file_info">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>File Info</string>
+   </property>
+   <property name="shortcut">
+    <string>I</string>
+   </property>
+  </action>
+  <action name="actionShow_seek_slider">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Position</string>
+   </property>
+   <property name="shortcut">
+    <string>P</string>
+   </property>
+  </action>
+  <action name="actionShow_volume">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Volume</string>
+   </property>
+   <property name="shortcut">
+    <string>V</string>
+   </property>
+  </action>
+  <action name="actionShow_tags">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Tags</string>
+   </property>
+   <property name="shortcut">
+    <string>T</string>
+   </property>
+  </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>Phonon::SeekSlider</class>
+   <extends>QWidget</extends>
+   <header location="global">phonon/seekslider.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Phonon::VolumeSlider</class>
+   <extends>QWidget</extends>
+   <header location="global">phonon/volumeslider.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>actionShow_file_info</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>fileInfoLabel</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>165</x>
+     <y>447</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionShow_seek_slider</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>seekSlider_2</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>170</x>
+     <y>474</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionShow_tags</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>dockWidget_2</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>506</x>
+     <y>281</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionShow_volume</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>volumeSlider_2</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>177</x>
+     <y>500</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
